[package]
name = "bose_soundtouch"
version = "2.1.2"
edition = "2021"
rust-version = "1.87"
description = "Rust client for the Bose SoundTouch API"
homepage = "https://github.com/timvw/bose_soundtouch"
repository = "https://github.com/timvw/bose_soundtouch"
readme = "README.md"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
keywords = ["bose", "soundtouch", "client"]
license = "Apache-2.0"

[features]
default = []
unknown-variants = []  # Enable handling of unknown enum variants
websocket = ["tokio", "tokio-tungstenite", "futures-util", "url"]
logging = ["log"]

[dependencies]
thiserror = "2.0"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13" }
tokio = { version = "1.36", features = ["sync"], optional = true }
tokio-tungstenite = { version = "0.28", features = ["url"], optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["rt", "macros", "rt-multi-thread", "test-util"] }
tokio-test = "0.4"
pretty_assertions = "1.4"
anyhow = "1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
viuer = "0.11"
image = { version = "0.25", features = ["jpeg", "png"] }
imageproc = "0.25"
rusttype = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.5.4", features = ["derive", "env"] }
